<resources>
    <string name="app_name">동작골</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_finish">Finish</string>

    <string name="error_msg_cant_write_comment">댓글을 달 수 없습니다.</string>
    <string name="error_msg_cant_delete_post">게시물을 삭제할 수 없습니다.</string>
    <string name="error_msg_cant_interlock">%s 연동을 실패하였습니다.</string>
    <string name="error_msg_already_get_token">이미 %s 계정과 연동이 되어 있습니다.</string>
    <string name="msg_success_upload_image">이미지 업로드를 성공하였습니다.</string>
    <string name="error_msg_cant_upload_image">이미지 업로드를 실패했습니다.</string>
    <string name="error_msg_save_picture">사진 저장이 실패했습니다.</string>
    <string name="msg_save_picture">사진 저장이 완료되었습니다.</string>
    <string name="msg_save_picture_url">사진 주소 저장이 완료되었습니다.</string>
    <string name="msg_save_link_url">링크 주소 저장이 완료되었습니다.</string>
    <string name="error_msg_failed_to_save_link">사진 링크 주소를 불러오지 못하였습니다.</string>
    <string name="alert_msg_still_img_upload">아직 이미지 업로드중입니다. 글을 올리시겠습니까?</string>
    <string name="msg_delete_article">게시물을 삭제하시겠습니까?</string>
    <string name="hint_search_edit_text">검색어를 입력해주세요.</string>

    <!-- message -->
    <string name="msg_illegal_uri_syntax">올바르지 않은 구문입니다.</string>
    <string name="msg_not_supported_url">해당 앱이 설치되어 있지 않습니다.</string>
    <string name="common_backpress">뒤로가기를 한 번 더 누르면 앱이 종료됩니다.</string>
    <string name="msg_confirm_install_isp_app">모바일 ISP가 설치되어 있지 않습니다. 마켓으로 이동하시겠습니까?</string>
    <string name="msg_login_success">로그인을 성공했습니다.</string>
    <string name="msg_login_failed">로그인을 실패했습니다.</string>
    <string name="msg_logout_success">로그아웃을 성공했습니다.</string>

    <!-- exeption handle -->
    <string name="url_go_market">http://play.google.com/store/apps/details?id=</string>

    <string name="inform_msg_login">주민님 로그인을 해주세요:)</string>
    <string name="inform_msg_logout">동작골에 오신 것을 환영합니다!</string>

    <string name="choose">이미지 선택</string>
    <string name="upload">업로드</string>
    <string name="title">타이틀</string>
    <string name="description">설명</string>
    <string name="notification_fail">이미지 업로드를 실패하였습니다...</string>
    <string name="notification_share_link">링크 공유</string>
    <string name="notifaction_success">성공적으로 업로드 되었습니다.</string>
    <string name="notification_progress">이미지를 업로드 중입니다....</string>
    <string name="toast_msg_connect_success">%s 연동을 성공하였습니다.</string>

    <string name="url_my_info">http://www.dzgol.net/index.php?act=dispMemberInfo</string>
    <string name="url_alarm_list">http://www.dzgol.net/index.php?act=dispNcenterliteNotifyList</string>
    <string name="url_alarm_setting">http://www.dzgol.net/index.php?act=dispNcenterliteUserConfig</string>
    <string name="url_my_scrap">http://www.dzgol.net/index.php?act=dispMemberScrappedDocument</string>

    <string name="dzgol_email_addr">dongzakgol@gmail.com</string>
    <string name="intent_data_dzgol_email_addr">mailto:dongzakgol@gmail.com</string>
    <string name="hint_add_favorite_cate">자주가는 카테고리를 추가해보세요!</string>
    <string name="push_title">동작골</string>

    <!-- 로그인 -->
    <string name="login_welcome_msg">다락방에 오신 것을 환영합니다!</string>
    <string name="login_hint_email">이메일 입력</string>
    <string name="login_hint_password">패스워드 입력</string>
    <string name="btn_sign_in">로그인</string>
    <string name="btn_sign_up">회원가입</string>
    <string name="toast_msg_vaildate_email_failed">정확한 이메일 주소를 입력해주세요.</string>
    <string name="toast_msg_vaildate_pwd_failed">패스워드를 입력해주세요.</string>
    <string name="toast_msg_success_sign_up">회원가입을 성공하였습니다.</string>
    <string name="toast_msg_success_sign_in">로그인을 성공하였습니다.</string>

</resources>
